Fix GDE Badge on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -400,3 +400,10 @@ video {
   right: 50px;
   z-index: 100;
 }
+
+@media (max-width: 400px){
+      #gde{
+        left: 50%;
+        margin-left: -50px;
+      }
+     }
